[package]
name = "up-to-chance"
version = "0.0.0"
edition = "2024"
rust-version = "1.96.0"

[features]
dev = [
    "bevy/debug",
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/default_font",
    "bevy/file_watcher",
    "bevy/trace",
    "avian2d/bevy_diagnostic",
    "avian2d/validate"
]

[dependencies]
avian2d = { version = "0.7" }
toml = { version = "1.1.0" }

[dependencies.bevy]
version = "0.19"
default-features = false
features = [
    "async_executor",
    "bevy_animation",
    "bevy_anti_alias",
    "bevy_asset",
    "bevy_audio",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_image",
    "bevy_input_focus",
    "bevy_light",
    "bevy_log",
    "bevy_material",
    "bevy_mesh",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_scene",
    "bevy_settings",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_ui_widgets",
    "bevy_window",
    "bevy_winit",
    "critical-section",
    "dds",
    "multi_threaded",
    "ktx2",
    "reflect_auto_register",
    "std",
    "symphonia-flac",
    "sysinfo_plugin",
    "ui_picking",
    "zstd_rust"
]

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "0.19"
default-features = false
features = [
    "x11",
    "wayland"
]

[target.'cfg(target_arch = "wasm32")'.dependencies.bevy]
version = "0.19"
default-features = false
features = [
    "web",
    "webgpu"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.build-check]
opt-level = 0
inherits = "dev"

[profile.build-check.package."*"]
opt-level = 0

[profile.release]
codegen-units = 1
lto = "thin"

[profile.release.package."*"]
codegen-units = 16

[profile.wasm-release]
inherits = "release"
opt-level = "s"
